#7 Add some comments for java24