@@ -1,11 +1,12 @@
 This file contains some notes for each snippet (for presentation )
 
-# S01_BoringMain
+## S01_BoringMain
 * nothing special.. just boring
 
-# S02_MainInterface
+## S02_MainInterface
 * interface vs class
 * no public (is public anyway as it is interface)
 
-# S03_ShortestMain
-* Unnamed classes.. since java21 (as preview); java24 (ga)
+## S03_ShortestMain
+* Unnamed classes.. since java21 (as preview)
+* With java24 execute like this: ´´´java --enable-preview S03_ShortestMain.java´´´
